--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -4884,8 +4884,8 @@ body.is-touch #leaderboard {
 
 .skin-modal {
     display: flex;
-    flex-direction: column;
     gap: 18px;
+    flex-direction: column;
 }
 
 .skin-modal__hint {
@@ -4896,17 +4896,25 @@ body.is-touch #leaderboard {
 
 .skin-modal__preview {
     margin-top: 8px;
-    padding: 16px;
     border-radius: 16px;
     background: #111111;
     border: 1px solid var(--color-accent);
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 200px;
 }
 
+.skin-modal__preview .snake-preview .snake-preview__canvas{
+    margin-left: 100px;
+
+}
 .skin-modal__preview .snake-preview {
     max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .damn-skin-grid {
