--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -4595,6 +4595,12 @@ body.is-touch .cashout-button {
     align-items: center;
 }
 
+.damn-card__actions {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
 .damn-card__header > div:first-child {
     display: flex;
     gap: 8px;
@@ -4916,6 +4922,23 @@ body.is-touch .cashout-button {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+}
+
+.damn-link-button__icon {
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+}
+
+.damn-link-button__icon svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.damn-link-button__label {
+    display: inline-flex;
+    align-items: center;
 }
 
 .damn-primary-button {
