--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -4219,8 +4219,8 @@ body.is-touch .cashout-button {
         width: 100%;
     }
 
-    .friends-card-button{
-        width: 90vw
+    .damn-column{
+        width: 90vw;
     }
 }
 
