--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -548,6 +548,11 @@
     #cashoutControl {
         bottom: calc(70px + var(--safe-bottom));
     }
+
+    .panel.game-leaderboard{
+        width: 100px !important;
+        height: 20px;
+    }
 }
 
 .cashout-button {
